--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,9 @@
 .animate-slide-down {
   animation: slide-down 0.5s ease-out forwards;
 }
+.animate-slide-right {
+  animation: slide-right 0.5s ease-out forwards;
+}
 
 @keyframes slide-down {
   0% {
@@ -14,9 +17,16 @@
     transform: translateY(0);
   }
 }
+@keyframes slide-right {
+  0% {
+    transform: translateX(100%)
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 
 @layer base { img { display: initial; } }
-
 
 /* remove the increment and decrement button from number input */
 input[type="number"]::-webkit-inner-spin-button, 
